test/integration/bad/new/mystery19.stan
transformed data { x[ : 242 while